[package]
name = "ekko"
version = "0.4.1"
authors = ["André Kristiansen"]
description = "Ekko is a simple and light utility for sending echo requests synchronously, built upon raw sockets."
repository = "https://github.com/dev-bio/ekko"
homepage = "https://github.com/dev-bio/ekko"
readme = "README.md"
license = "MIT"
edition = "2018"

keywords = [
    "icmpv6",
    "icmpv4",
    "icmp",
    "echo",
    "ping",
]

exclude = [
    ".gitattributes",
    ".gitignore",
    
    ".vscode/**",
    ".github/**", 
    ".cargo/**",

    "media/**",
]

[dependencies]
thiserror = { version = "1.0.24" }
byteorder = { version = "1.4.2" }
socket2 = { version = "0.4.0", features = [ "all" ] }
rand = { version = "0.8.3" }
